--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,8 +21,19 @@
   color: white !important;
   background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
   border-color: #ff001f !important;
+  margin-left: -25px;
 }
 .signInButton:hover {
+  background-color: rgba(255, 0, 31, 0.85) !important;
+}
+
+.signButton{
+  color: white !important;
+  background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
+  border-color: #ff001f !important;
+}
+
+.signButton:hover{
   background-color: rgba(255, 0, 31, 0.85) !important;
 }
 
@@ -96,186 +107,17 @@ input.searchNav2{
 }
 
 
-
-/* @media all and (max-width : 321px) {
-  .fixed-top{
-    height: 150px !important;
-    display: inline-block !important;
-  }
-  .imageLogo2{
-    margin-left: -18px !important;
-  }
-.imageLogo{
-  height: 70px !important;
-  width: 250px;
-  margin-top: 10px !important;
-}
-.showLogin{
-  margin-left: -170px !important;
-}
-.linkCreate2{
-  visibility: visible;
-  display: block;
-}
-.linkCreate{
-  margin-left: 13px;
-  color: gray;
-  display: none;
-  visibility: hidden;
-}
-.navbar-nav{
-  margin-right: 100px;
-  width: 300px !important;
-}
-.createButton{
-  visibility: visible !important;
-}
-
-input.searchNav2{
-  display: none;
-  visibility: hidden;
-}
-.iconSearchNav{
-  display: none;
-  visibility: hidden;
-}
-.buttonSign{
-  visibility: hidden;
-  display: none;
-}
-.linkSign{
-  margin-right: 160px;
-  color: gray;
-  visibility: visible;
-  display: block;
-}
-}
-@media only screen and (max-device-width: 480px){
-	.imageLogo{
-    height: 60px;
-    margin-left: 0px !important;
-  }
-  .navLogo{
-    margin-left: 110px;
-  }
-	.navbar-nav{
-		padding-bottom: 5px;
-	}
-	.signInButton{
-		margin-left: 150px;
-		margin-top: 10px;
-  }
-	.signButton {
-		margin-right: 170px;
-	}
-	.navProfile{
-		margin-left: 90px !important;
-  }
-  .brand{
-    margin-top: -10px;
-    margin-left: -50px;
-  }
-  input.searchNav2{
-    display: none;
-    visibility: hidden;
-  }
-  .iconSearchNav{
-    display: none;
-    visibility: hidden;
-  }
-  .fixed-top{
-    height: 110px !important;
-  }
-  .linkCreate2{
-    visibility: visible;
-    display: block;
-  }
-  .linkCreate{
-    visibility: hidden;
-    display: none;
-  }
-  }
-  @media all and (max-width:600px){
-    .navbar-nav{
-      width: 550px;
+  @media (min-width : 319px) and (max-width : 414.98px ) {
+    img.imageLogo2{
+      margin: 0 !important;
     }
-    .createButton{
-      width:120px !important;
-    }
-    button.signInButton{
-      margin-left: 80px;
-    }
-    .showLogin{
-      margin-left: -150px;
-    }
-.navProfile{
-  width: 100px !important;
-}
-  }
-  @media all and (max-width:768px) {
-    .imageLogo{
-      height: 80px;
-      margin-top: -20px;
-    }
-    .navbar-nav{
-      padding-bottom: 5px;
-    }
-    .signInButton{
-      margin-left: 290px;
-      margin-top: 10px;
-    }
-    .navProfile{
-      margin-left: 160px;
-    }
-    input.searchNav2{
-      display: none;
-      visibility: hidden;
-    }
-    .iconSearchNav{
-      display: none;
-      visibility: hidden;
-    }
-  }
-   @media all and (max-width: 900px) {
-    .imageLogo{
-      height: 70px;
-      margin-top:-20px
-    }
-    .navbar-nav {
-      height: 115px;
-      margin-left: 185px !important;
-      width: 100vw;
-      margin-top: 21px;
-    }
-    .signInButton{
-      margin-left: -15px;
-      margin-top: 10px;
-    }
-    .navProfile{
-      margin-left: 200px;
-    }
-  } 
-  @media all and (max-width:991px){
-    .navProfile{
-      margin-left: 39%;
-      width: 100px;
-    }
-    .navbar-nav {
-      height: 105px;
-      margin-left: 63px;
-      width: 100vw;
-      margin-top: 21px;
-    }
-  } */
-
-  @media (min-width : 320px) and (max-width : 414.98px ) {
     .navbar-toggler{
       margin-top: -64px !important;
       margin-left:auto
     }
     .navbar-nav{
       margin-top: 10px;
-      height: 95px;
+      height: 110px;
     }
 
     input.searchNav2{
@@ -286,6 +128,13 @@ input.searchNav2{
       display: none;
       visibility: hidden;
     }
+    .signButton{
+      margin-top: 0;
+      margin-left: -65px;
+     }
+     .navProfile{
+       height: 40px;
+     }
   }  
 
   @media (min-width : 415px) and (max-width : 429.98px ) {
@@ -295,7 +144,7 @@ input.searchNav2{
     }
     .navbar-nav{
       margin-top: 10px;
-      height: 95px;
+      height: 110px;
     }
 
     input.searchNav2{
@@ -306,6 +155,13 @@ input.searchNav2{
       display: none;
       visibility: hidden;
     }
+    .signButton{
+      margin-top: 0;
+      margin-left: -65px;
+     }
+     .navProfile{
+       height: 40px;
+     }
   }  
 
   @media (min-width : 430px) and (max-width : 449.98px ) {
@@ -315,7 +171,7 @@ input.searchNav2{
     }
     .navbar-nav{
       margin-top: 10px;
-      height: 95px;
+      height: 110px;
     }
 
     input.searchNav2{
@@ -326,6 +182,13 @@ input.searchNav2{
       display: none;
       visibility: hidden;
     }
+    .signButton{
+      margin-top: 0;
+      margin-left: -65px;
+     }
+     .navProfile{
+       height: 40px;
+     }
   }  
 
   @media (min-width : 450px) and (max-width : 479px ) {
@@ -335,7 +198,7 @@ input.searchNav2{
     }
     .navbar-nav{
       margin-top: 10px;
-      height: 95px;
+      height: 110px;
     }
 
     input.searchNav2{
@@ -346,6 +209,13 @@ input.searchNav2{
       display: none;
       visibility: hidden;
     }
+    .signButton{
+      margin-top: 0;
+      margin-left: -65px;
+     }
+     .navProfile{
+       height: 40px;
+     }
   }
 
   @media (min-width : 480px) and (max-width: 487.98px){
@@ -354,7 +224,7 @@ input.searchNav2{
     }
     .navbar-nav{
       margin-top: 10px;
-      height: 95px;
+      height: 110px;
     }
     input.searchNav2{
       display: none;
@@ -364,6 +234,13 @@ input.searchNav2{
       display: none;
       visibility: hidden;
     }
+    .signButton{
+      margin-top: 0;
+      margin-left: -65px;
+     }
+     .navProfile{
+       height: 40px;
+     }
   }
 
   @media (min-width: 488px) and (max-width: 767.98px) {
@@ -385,6 +262,10 @@ input.searchNav2{
       display: none;
       visibility: hidden;
     }
+    .signButton{
+      margin-top: 0;
+      margin-left: -65px;
+    }
   }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -401,7 +282,11 @@ input.searchNav2{
   input.searchNav2{
     padding: 25px 60px !important;
     margin-left: -210px !important;
-    }
+  }
+  .signButton{
+    margin-top: 0;
+    margin-left: -70px;
+  }
 }
 
   @media (min-width: 992px) and (max-width: 1199.98px) {
